# tls-fingerprint-extractor

./: .gitattributes  .gitignore  .pythonrc  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ja3_extractor.py  ja3_extractor_auto.py  pyproject.toml  requirements.txt  run_ja3_extractor.sh  session_ja3_extractor.py  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-publish.yml
docs/: API.md  API_EXAMPLES.md  DEVELOPER_GUIDE.md  FAQ.md  USER_GUIDE.md  index.md
examples/: README.md  __init__.py  api_examples.py  quick_api_test.py  simple_api_example.py  working_api_example.py
src/: __init__.py
src/ja3_extractor/: __init__.py  ja3_session_analyzer.py
src/ja3_extractor/cli/: __init__.py  argument_parser.py
src/ja3_extractor/core/: __init__.py  ja3_extractor.py  session_manager.py
src/ja3_extractor/output/: __init__.py  output_formatter.py
src/ja3_extractor/rules/: __init__.py  suricata_rule_generator.py
src/ja3_extractor/utils/: __init__.py  colors.py  utils.py
tests/: README.md  __init__.py  quick_api_test.py  test_ja3_extractor.py
