[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ja3-extractor"
version = "1.0.0"
description = "JA3 and JA3S hash extraction from PCAP files with session grouping"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mikhail Shashin"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "dpkt>=1.9.8",
    "packaging>=25.0",
]

[project.scripts]
ja3-extractor = "ja3_extractor:main"

[project.urls]
Homepage = "https://github.com/shashinma/tls-fingerprint-extractor"
Repository = "https://github.com/shashinma/tls-fingerprint-extractor"
Issues = "https://github.com/shashinma/tls-fingerprint-extractor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Python configuration
[tool.pycache]
prefix = "__pycache__"
